Fix for layout issues and menubar text.

--- a/files/style.css
+++ b/files/style.css
@@ -66,14 +66,16 @@ Developer. All Rights Reserved.
     padding:8px 0 0;
     text-align:right;
     width:550px;
+    height: 38px;
 }
 
 #loginmenu_div a {
-    color:#039;
+    color:#000;
+	font-size: 14px;
 }
 
 #loginmenu_div a:hover {
-    color:#06c;
+    color:#fff;
 }
 
 #logo {
@@ -115,7 +117,7 @@ Developer. All Rights Reserved.
     border-top:1px solid #000;
     color:#111;
     margin-left:-1px;
-    padding:5px 5px 5px 10px;
+    padding:5px 10px 5px 12px;
     text-decoration:none;
 }
 
@@ -143,12 +145,14 @@ Developer. All Rights Reserved.
 #sitemenu_div {
     float:right;
     margin-right:-10px;
-    margin-top:24px;
+    margin-top:0px;
+	position: relative;
+
 }
 
 #sitemenu_ul .active {
-    background-color:#EDEBDF;
-    border-bottom:1px solid #EDEBDF;
+    background-color:#F4F2EB;
+    border-bottom:1px solid #F4F2EB;
     border-left:1px solid #000;
     border-right:1px solid #000;
     border-top:1px solid #000;
@@ -729,7 +733,7 @@ a:hover {
 }
 
 body {
-    background-color:#EDEBDF;
+    background-color:#F4F2EB;
     color:#444;
     font-family:Verdana, Arial, Helvetica, sans-serif;
     font-size:12px;
